--- a/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc.csproj
+++ b/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc.csproj
@@ -55,6 +55,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Usercontrols\Usermain.xaml.cs">
+      <DependentUpon>Usermain.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Usercontrols\Usermenu.xaml.cs">
+      <DependentUpon>Usermenu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Usercontrols\Userstatus.xaml.cs">
+      <DependentUpon>Userstatus.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -67,6 +76,18 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Usercontrols\Usermain.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Usercontrols\Usermenu.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Usercontrols\Userstatus.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -93,6 +114,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\icons\Bê tông.jpg" />
+    <Resource Include="Assets\icons\địa chất.jpg" />
+    <Resource Include="Assets\images\giao diện.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
