--- a/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc.csproj
+++ b/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc.csproj
@@ -55,6 +55,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Usercontrols\Usermain.xaml.cs">
+      <DependentUpon>Usermain.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Usercontrols\Usermenu.xaml.cs">
+      <DependentUpon>Usermenu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Usercontrols\Userstatus.xaml.cs">
+      <DependentUpon>Userstatus.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -67,6 +76,18 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Usercontrols\Usermain.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Usercontrols\Usermenu.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Usercontrols\Userstatus.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
